--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
 	<canvas id="myCanvas" width="1280" height="720" style="border:1px solid #000000;"></canvas>
 	<center>
 			<div id = "field"> Name: <input type="text" id="namebox" value="Player"> <br>
-			<input type="button" id = "start" onclick = "startGame();" value="Click here to start"> </div>
+			<input type="button" id = "start" onclick = "startGame();" value="Click here to start"> </div> 
+        <a href = "https://goo.gl/forms/hiL04xnExhVm8P113" target = "_blank"> <input type="button" value="Don't forget to do our survey"> </a></div>
     </center>
     <br>
     
-    <div id = "g"> Written by Justin Tieu<br>code available on github </div>
+    <div id = "g"> Written by Justin Tieu code available on github <br>
     
 	<script> 
 		Run();
